antlr/idd/IddParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Idd.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class IddParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, GROUPSTATEMENT=3, AUTOCALCULATABLE_STATEMENT=4, AUTOSIZABLE_STATEMENT=5, 
		BEGIN_EXTENSIBLE_STATEMENT=6, DEFAULT_STATEMENT=7, DEPRECATED_STATEMENT=8, 
		EXTENSIBLE_STATEMENT=9, EXTERNAL_LIST_STATEMENT=10, FIELD_STATEMENT=11, 
		FORMAT_STATEMENT=12, GROUP_STATEMENT=13, IP_UNITS_STATEMENT=14, KEY_STATEMENT=15, 
		MAXIMUM_EXCLUSIVE_STATEMENT=16, MAXIMUM_INCLUSIVE_STATEMENT=17, MEMO_STATEMENT=18, 
		MINIMUM_EXCLUSIVE_STATEMENT=19, MINIMUM_INCLUSIVE_STATEMENT=20, NOTE_STATEMENT=21, 
		OBJECT_LIST_STATEMENT=22, OBSOLETE_STATEMENT=23, REFERENCE_STATEMENT=24, 
		REFERENCE_CLASS_NAME_STATEMENT=25, REQUIRED_FIELD_STATEMENT=26, REQUIRED_OBJECT_STATEMENT=27, 
		RETAINCASE_STATEMENT=28, TYPE_STATEMENT=29, UNIQUE_OBJECT_STATEMENT=30, 
		UNITS_STATEMENT=31, INTEGER=32, ALPHA_OPTION=33, NUMERIC_OPTION=34, OBJECT_NAME=35, 
		COMMENT=36, FIELD_SEPARATOR=37, OBJECT_TERMINATOR=38, NEWLINE=39, WS=40;
	public const int
		RULE_idd = 0, RULE_object = 1, RULE_object_header = 2, RULE_fields = 3, 
		RULE_terminating_field = 4, RULE_field = 5, RULE_field_id = 6, RULE_group = 7, 
		RULE_object_properties = 8, RULE_field_properties = 9, RULE_object_property = 10, 
		RULE_field_property = 11, RULE_min_fields_statement = 12, RULE_units_based_on_field_statement = 13;
	public static readonly string[] ruleNames = {
		"idd", "object", "object_header", "fields", "terminating_field", "field", 
		"field_id", "group", "object_properties", "field_properties", "object_property", 
		"field_property", "min_fields_statement", "units_based_on_field_statement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\\min-fields '", "'\\unitsBasedOnField '", null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "','", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "GROUPSTATEMENT", "AUTOCALCULATABLE_STATEMENT", "AUTOSIZABLE_STATEMENT", 
		"BEGIN_EXTENSIBLE_STATEMENT", "DEFAULT_STATEMENT", "DEPRECATED_STATEMENT", 
		"EXTENSIBLE_STATEMENT", "EXTERNAL_LIST_STATEMENT", "FIELD_STATEMENT", 
		"FORMAT_STATEMENT", "GROUP_STATEMENT", "IP_UNITS_STATEMENT", "KEY_STATEMENT", 
		"MAXIMUM_EXCLUSIVE_STATEMENT", "MAXIMUM_INCLUSIVE_STATEMENT", "MEMO_STATEMENT", 
		"MINIMUM_EXCLUSIVE_STATEMENT", "MINIMUM_INCLUSIVE_STATEMENT", "NOTE_STATEMENT", 
		"OBJECT_LIST_STATEMENT", "OBSOLETE_STATEMENT", "REFERENCE_STATEMENT", 
		"REFERENCE_CLASS_NAME_STATEMENT", "REQUIRED_FIELD_STATEMENT", "REQUIRED_OBJECT_STATEMENT", 
		"RETAINCASE_STATEMENT", "TYPE_STATEMENT", "UNIQUE_OBJECT_STATEMENT", "UNITS_STATEMENT", 
		"INTEGER", "ALPHA_OPTION", "NUMERIC_OPTION", "OBJECT_NAME", "COMMENT", 
		"FIELD_SEPARATOR", "OBJECT_TERMINATOR", "NEWLINE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Idd.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static IddParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IddParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IddParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class IddContext : ParserRuleContext {
		public ITerminalNode[] COMMENT() { return GetTokens(IddParser.COMMENT); }
		public ITerminalNode COMMENT(int i) {
			return GetToken(IddParser.COMMENT, i);
		}
		public GroupContext[] group() {
			return GetRuleContexts<GroupContext>();
		}
		public GroupContext group(int i) {
			return GetRuleContext<GroupContext>(i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(IddParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(IddParser.NEWLINE, i);
		}
		public IddContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_idd; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterIdd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitIdd(this);
		}
	}

	[RuleVersion(0)]
	public IddContext idd() {
		IddContext _localctx = new IddContext(Context, State);
		EnterRule(_localctx, 0, RULE_idd);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GROUPSTATEMENT) | (1L << COMMENT) | (1L << NEWLINE))) != 0)) {
				{
				State = 31;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case COMMENT:
					{
					State = 28; Match(COMMENT);
					}
					break;
				case GROUPSTATEMENT:
					{
					State = 29; group();
					}
					break;
				case NEWLINE:
					{
					State = 30; Match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjectContext : ParserRuleContext {
		public Object_headerContext object_header() {
			return GetRuleContext<Object_headerContext>(0);
		}
		public FieldsContext fields() {
			return GetRuleContext<FieldsContext>(0);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_object; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterObject(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitObject(this);
		}
	}

	[RuleVersion(0)]
	public ObjectContext @object() {
		ObjectContext _localctx = new ObjectContext(Context, State);
		EnterRule(_localctx, 2, RULE_object);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; object_header();
			State = 37; fields();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Object_headerContext : ParserRuleContext {
		public ITerminalNode OBJECT_NAME() { return GetToken(IddParser.OBJECT_NAME, 0); }
		public ITerminalNode FIELD_SEPARATOR() { return GetToken(IddParser.FIELD_SEPARATOR, 0); }
		public Object_propertiesContext object_properties() {
			return GetRuleContext<Object_propertiesContext>(0);
		}
		public ITerminalNode[] COMMENT() { return GetTokens(IddParser.COMMENT); }
		public ITerminalNode COMMENT(int i) {
			return GetToken(IddParser.COMMENT, i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(IddParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(IddParser.NEWLINE, i);
		}
		public Object_headerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_object_header; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterObject_header(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitObject_header(this);
		}
	}

	[RuleVersion(0)]
	public Object_headerContext object_header() {
		Object_headerContext _localctx = new Object_headerContext(Context, State);
		EnterRule(_localctx, 4, RULE_object_header);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 39; Match(OBJECT_NAME);
			State = 40; Match(FIELD_SEPARATOR);
			State = 44;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 41;
					_la = TokenStream.LA(1);
					if ( !(_la==COMMENT || _la==NEWLINE) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					} 
				}
				State = 46;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 47; object_properties();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldsContext : ParserRuleContext {
		public Terminating_fieldContext terminating_field() {
			return GetRuleContext<Terminating_fieldContext>(0);
		}
		public FieldContext[] field() {
			return GetRuleContexts<FieldContext>();
		}
		public FieldContext field(int i) {
			return GetRuleContext<FieldContext>(i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fields; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterFields(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitFields(this);
		}
	}

	[RuleVersion(0)]
	public FieldsContext fields() {
		FieldsContext _localctx = new FieldsContext(Context, State);
		EnterRule(_localctx, 6, RULE_fields);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 49; field();
					}
					} 
				}
				State = 54;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			State = 55; terminating_field();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Terminating_fieldContext : ParserRuleContext {
		public Field_idContext field_id() {
			return GetRuleContext<Field_idContext>(0);
		}
		public ITerminalNode OBJECT_TERMINATOR() { return GetToken(IddParser.OBJECT_TERMINATOR, 0); }
		public Field_propertiesContext field_properties() {
			return GetRuleContext<Field_propertiesContext>(0);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(IddParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(IddParser.NEWLINE, i);
		}
		public Terminating_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_terminating_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterTerminating_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitTerminating_field(this);
		}
	}

	[RuleVersion(0)]
	public Terminating_fieldContext terminating_field() {
		Terminating_fieldContext _localctx = new Terminating_fieldContext(Context, State);
		EnterRule(_localctx, 8, RULE_terminating_field);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 57; field_id();
			State = 58; Match(OBJECT_TERMINATOR);
			State = 62;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 59; Match(NEWLINE);
					}
					} 
				}
				State = 64;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			State = 65; field_properties();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldContext : ParserRuleContext {
		public Field_idContext field_id() {
			return GetRuleContext<Field_idContext>(0);
		}
		public ITerminalNode FIELD_SEPARATOR() { return GetToken(IddParser.FIELD_SEPARATOR, 0); }
		public Field_propertiesContext field_properties() {
			return GetRuleContext<Field_propertiesContext>(0);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(IddParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(IddParser.NEWLINE, i);
		}
		public FieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterField(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitField(this);
		}
	}

	[RuleVersion(0)]
	public FieldContext field() {
		FieldContext _localctx = new FieldContext(Context, State);
		EnterRule(_localctx, 10, RULE_field);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; field_id();
			State = 68; Match(FIELD_SEPARATOR);
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NEWLINE) {
				{
				{
				State = 69; Match(NEWLINE);
				}
				}
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 75; field_properties();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_idContext : ParserRuleContext {
		public ITerminalNode ALPHA_OPTION() { return GetToken(IddParser.ALPHA_OPTION, 0); }
		public ITerminalNode NUMERIC_OPTION() { return GetToken(IddParser.NUMERIC_OPTION, 0); }
		public Field_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field_id; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterField_id(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitField_id(this);
		}
	}

	[RuleVersion(0)]
	public Field_idContext field_id() {
		Field_idContext _localctx = new Field_idContext(Context, State);
		EnterRule(_localctx, 12, RULE_field_id);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			_la = TokenStream.LA(1);
			if ( !(_la==ALPHA_OPTION || _la==NUMERIC_OPTION) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GroupContext : ParserRuleContext {
		public ITerminalNode GROUPSTATEMENT() { return GetToken(IddParser.GROUPSTATEMENT, 0); }
		public ObjectContext[] @object() {
			return GetRuleContexts<ObjectContext>();
		}
		public ObjectContext @object(int i) {
			return GetRuleContext<ObjectContext>(i);
		}
		public ITerminalNode[] COMMENT() { return GetTokens(IddParser.COMMENT); }
		public ITerminalNode COMMENT(int i) {
			return GetToken(IddParser.COMMENT, i);
		}
		public GroupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_group; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterGroup(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitGroup(this);
		}
	}

	[RuleVersion(0)]
	public GroupContext group() {
		GroupContext _localctx = new GroupContext(Context, State);
		EnterRule(_localctx, 14, RULE_group);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; Match(GROUPSTATEMENT);
			State = 84;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 82;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case OBJECT_NAME:
						{
						State = 80; @object();
						}
						break;
					case COMMENT:
						{
						State = 81; Match(COMMENT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 86;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Object_propertiesContext : ParserRuleContext {
		public Object_propertyContext[] object_property() {
			return GetRuleContexts<Object_propertyContext>();
		}
		public Object_propertyContext object_property(int i) {
			return GetRuleContext<Object_propertyContext>(i);
		}
		public ITerminalNode[] COMMENT() { return GetTokens(IddParser.COMMENT); }
		public ITerminalNode COMMENT(int i) {
			return GetToken(IddParser.COMMENT, i);
		}
		public Object_propertiesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_object_properties; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterObject_properties(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitObject_properties(this);
		}
	}

	[RuleVersion(0)]
	public Object_propertiesContext object_properties() {
		Object_propertiesContext _localctx = new Object_propertiesContext(Context, State);
		EnterRule(_localctx, 16, RULE_object_properties);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << EXTENSIBLE_STATEMENT) | (1L << FORMAT_STATEMENT) | (1L << MEMO_STATEMENT) | (1L << OBSOLETE_STATEMENT) | (1L << REQUIRED_OBJECT_STATEMENT) | (1L << UNIQUE_OBJECT_STATEMENT) | (1L << COMMENT))) != 0)) {
				{
				State = 89;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__0:
				case EXTENSIBLE_STATEMENT:
				case FORMAT_STATEMENT:
				case MEMO_STATEMENT:
				case OBSOLETE_STATEMENT:
				case REQUIRED_OBJECT_STATEMENT:
				case UNIQUE_OBJECT_STATEMENT:
					{
					State = 87; object_property();
					}
					break;
				case COMMENT:
					{
					State = 88; Match(COMMENT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_propertiesContext : ParserRuleContext {
		public Field_propertyContext[] field_property() {
			return GetRuleContexts<Field_propertyContext>();
		}
		public Field_propertyContext field_property(int i) {
			return GetRuleContext<Field_propertyContext>(i);
		}
		public ITerminalNode[] COMMENT() { return GetTokens(IddParser.COMMENT); }
		public ITerminalNode COMMENT(int i) {
			return GetToken(IddParser.COMMENT, i);
		}
		public Field_propertiesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field_properties; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.EnterField_properties(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIddListener typedListener = listener as IIddListener;
			if (typedListener != null) typedListener.ExitField_properties(this);
		}
	}

	[RuleVersion(0)]
	public Field_propertiesContext field_properties() {
		Field_propertiesContext _localctx = new Field_propertiesContext(Context, State);
		EnterRule(_localctx, 18, RULE_field_properties);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 96;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case T__1:
					case AUTOCALCULATABLE_STATEMENT:
					case AUTOSIZABLE_STATEMENT:
					case BEGIN_EXTENSIBLE_STATEMENT:
					case DEFAULT_STATEMENT:
					case DEPRECATED_STATEMENT:
					case EXTERNAL_LIST_STATEMENT:
					case FIELD_STATEMENT:
					case IP_UNITS_STATEMENT:
					case KEY_STATEMENT:
					case MAXIMUM_EXCLUSIVE_STATEMENT:
					case MAXIMUM_INCLUSIVE_STATEMENT:
					case MINIMUM_EXCLUSIVE_STATEMENT:
					case MINIMUM_INCLUSIVE_STATEMENT:
					case NOTE_STATEMENT:
					case OBJECT_LIST_STATEMENT:
					case REFERENCE_STATEMENT:
					case REFERENCE_CLASS_NAME_STATEMENT:
					case REQUIRED_FIELD_STATEMENT:
					case RETAINCASE_STATEMENT:
					case TYPE_STATEMENT:
					case UNITS_STATEMENT:
						{
						State = 94; field_property();
						}
						break;
					case COMMENT:
						{
						State = 95; Match(COMMENT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 100;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
